--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
 	"require":
 	{
 		"silverstripe/framework": "~3.1",
-		"silverstripe/cms": "~3.1"
-		"silverstripe/payment": "3.0.x-dev"
+		"silverstripe/cms": "~3.1",
+		"silverstripe/payment": "3.0.x-dev",
+		"swipestripe/swipestripe": "2.1.*"
 	},
 	"support": 
 	{
